<resources>
    <string name="app_name">Doa &amp; Dzikir App</string>
    <string name="txt_judul_fitur">Kumpulan Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qauliyah">Sunnah-Sunnah Qauliyah \nDzikir &amp; Doa Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setiap Saat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_artikel_islami">Artikel Islami</string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir_doa_harian">Icon Dzikir Doa Harian</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_qauliyah_shalat">Icon Qauliyah Shalat</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Icon btn dzikir Pagi</string>
    <string name="content_txt_icon_btn_dzikir_petang">Icon btn Dzikir Petang</string>
    <string name="content_txt_icon_image_for_background_dzikir">Icon image for Background Dzikir</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string name="content_txt_icon_image_for_bacground">content_txt_icon_image_for_bacground</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Hukum membuang waktu dalam islam</item>
        <item>Artikel 2 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 3 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 4 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 5 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 6 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 7 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 8 Artikel Artikel Artikel Artikel Artikel</item>
    </string-array>
    <string-array name="arr_desc_artikel">
        <item>‘Jadilah kamu di dunia ini seakan-akan kamu orang asing atau orang yang melewati suatu jalan.’ Ibnu Umar berkata.” Apabila kamu berada di sore hari janganlah kamu menunggu (melakukan sesuatu) hingga pagi hari (datang). Apabila kamu berada di pagi hari jangankah menunggu (melakukan sesuatu) hingga sore (datang). Gunakan waktu sehatmu untuk menghadapi sakitmu, dan waktu hidupmu untuk menghadapi matimu.” (HR. Bukhari).

Rasulullah yang merupakan manusia terbaik di dunia ini, selalu memberikan teladan yang terbaik dalam aspek kehidupan apapun sebab beliau merupakan manusia yang paling sempurna dan tepat untuk menjadi Rasulullah yang mulia. Mengenai waktu, beliau selalu menggunakan waktu untuk hal hal yang bermanfaat dalam rangka ibadah dan memperbanyak amal kebaikan pada Allah serta berdakwah demi islam.

Sebagai umatnya tentu kia juga wajib mencontohnya, lihatlah betapa ada banyak hal yang bisa kita lakukan di dunia ini dan di waktu yang sekarang, seperti membaca hal yang bermanfaat, belajar, membantu orang lain, memahami islam, dan sebagainya yang bermanfaat. Sungguh tak ada gunanya melewatkan waktu begitu saja tanpa melakukan segala sesuatu yang berguna.

</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
    </string-array>
    <string-array name="arr_dzikir_doa_harian">
        <item>Sebelum tidur</item>
        <item>Ketika mimpi buruk</item>
        <item>Bangun tidur</item>
        <item>Masuk WC/kamar mandi</item>
        <item>Keluar WC/kamar mandi</item>
        <item>Sebelum wudhu</item>
        <item>Setelah wudhu</item>
        <item>Mengenakan pakaian</item>
        <item>Melepas pakaian</item>
        <item>Keluar rumah</item>
        <item>Masuk rumah</item>
        <item>Pergi ke Masjid</item>
        <item>Masuk ke Masjid</item>
        <item>Keluar dari Masjid</item>
        <item>Ketika mendengar Adzan</item>
        <item>Setelah adzan</item>
        <item>Bersin</item>
        <item>Kepada orang yang berbuat baik kepadamu</item>
        <item>Ketika marah</item>
    </string-array>
</resources>