<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.PagiPetangDzikirActivity">

    <TextView
        android:id="@+id/tv_dzikir_pagi_petang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_menu"
        android:gravity="bottom"
        android:padding="16dp"
        android:text="@string/txt_dzikir_pagi_petang"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="145dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikir_pagi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dzikir_pagi_petang"
        app:layout_constraintBottom_toTopOf="@id/cv_dzikir_pagi"
        android:layout_marginTop="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_txt_icon_image_for_bacground"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_morning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_dzikir_pagi"
            android:background="@color/blue"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/bg_btn_dzikir"
         android:background="@android:color/transparent"
         android:contentDescription="@string/content_txt_icon_btn_dzikir_pagi"/>

        <ImageButton
            android:id="@+id/img_btn_dzikir_pagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_pagi"
            android:src="@drawable/bg_btn_dzikir"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_dzikir_petang"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_dzikir_pagi">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_txt_icon_image_for_bacground"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_evening" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_dzikir_petang"
            android:background="@color/blue"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_btn_dzikir_petang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bg_btn_dzikir"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_petang"/>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>